java base 相关